--- a/app/blocks/informer/informer.scss
+++ b/app/blocks/informer/informer.scss
@@ -20,6 +20,10 @@
     padding: 3px 17px 4px;
   }
 
+  &_gray {
+    background-color: $color-basic;
+  }
+
   &_sb {
     justify-content: space-between;
   }
