--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -42,6 +42,16 @@
       color: $color-basic;
     }
 
+    &_dark2 {
+      color: $color-oi-dark;
+    }
+
+    &_fz13 {
+      @include text13;
+
+      line-height: (20 / 13);
+    }
+
     &_fz16 {
       @include text16;
 
