--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -44,16 +44,13 @@
     }
   }
 
-  &-container_nocenter {
-    .fancybox-slide--html {
-      padding-top: 6vw;
-      padding-bottom: 6vw;
+  &-container.is-top {
+    .fancybox-slide {
+      padding: 6vw 0 0;
       box-sizing: border-box;
-      overflow-y: scroll;
 
       @include screen('sm') {
-        padding-top: 0;
-        padding-bottom: 0;
+        padding: 0;
       }
     }
 
