--- a/app/blocks/time/time.scss
+++ b/app/blocks/time/time.scss
@@ -24,6 +24,18 @@
     &_color {
       color: $color-peach;
     }
+
+    &_fz14 {
+      @include text;
+
+      line-height: (20 / 14);
+
+      @include screen('sm') {
+        @include text12;
+
+        line-height: (20 / 12);
+      }
+    }
   }
 
   &__time {
@@ -45,6 +57,12 @@
 
         line-height: (17 / 14);
       }
+    }
+
+    &_fz14 {
+      @include text;
+
+      line-height: (20 / 14);
     }
 
     &_fz18 {
