--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -170,6 +170,7 @@ $color-tab-disabled: #a1a5ab;
 $color-compose-text: #a6aab3;
 $color-star-gray: #bcc6ca;
 $color-table-dark: #181c22;
+$color-oi-dark: #575f6a;
 
 // ##########
 // Transitions
