--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -79,6 +79,12 @@
     height: 11px;
   }
 
+  &_size16 {
+    min-width: 16px;
+    width: 16px;
+    height: 16px;
+  }
+
   &_size17 {
     min-width: 17px;
     width: 17px;
