--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -126,6 +126,14 @@
     padding: 0;
   }
 
+  &_mxw488 {
+    max-width: 488px;
+
+    @include screen('sm') {
+      max-width: none;
+    }
+  }
+
   &_mob-notime {
 
     #{$b} {
