--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -3,6 +3,9 @@
 
   position: relative;
   display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   vertical-align: middle;
   box-sizing: border-box;
   color: $color-white;
@@ -80,6 +83,7 @@
     z-index: 1;
     border-radius: 21px;
     pointer-events: none;
+    width: 100%;
 
     @include screen('sm') {
       padding: 8px 22px;
@@ -402,6 +406,12 @@
     #{$b}__text {
       padding: 5px 22px;
     }
+
+    &#{$b}_fz14 {
+      @include text;
+
+      line-height: (26 / 14);
+    }
   }
 
   &_smaller {
@@ -412,10 +422,18 @@
 
     #{$b}__text {
       padding: 2px 10px 3px;
+      vertical-align: middle;
     }
 
     &#{$b}_fz17 {
       @include text-mid;
+    }
+
+    &#{$b}_fz14 {
+      @include text;
+
+      border-radius: 18px;
+      line-height: (26 / 14);
     }
   }
 
