--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -58,6 +58,7 @@ block content
         +link(href="profile-kyc-states1.html") Profile | KYC - all files states and UBO awaiting (profile-kyc-states1.html)
         +link(href="profile-kyc-states2.html") Profile | KYC - UBO confirmed (profile-kyc-states2.html)
         +link(href="profile-kyc-states3.html") Profile | KYC - UBO refused (profile-kyc-states3.html)
+        //- +link(href="system.html") Space pool - system messages (system.html)
 
       +page-title._small Попапы
       +e.list
